headlamp/headlamp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: headlamp
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    cert-manager.io/cluster-issuer: 'letsencrypt'
spec:
  rules:
    - host: headlamp.k3s.pro
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: headlamp
                port:
                  number: 80
  tls:
    - secretName: headlamp-ingress-cert
      hosts:
        - headlamp.k3s.pro
